Fix: hide customization toolbar visibility button in CSS

--- a/src/browser/base/content/zen-styles/zen-single-components.css
+++ b/src/browser/base/content/zen-styles/zen-single-components.css
@@ -48,3 +48,7 @@
     display: none;
   }
 }
+
+#customization-toolbar-visibility-button{
+  display: none !important;
+}
